refactor: remove some text now included in description, move some stuff around

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-name: HMC Project HERMES
-title: HMC Project HERMES
+name: HMC HERMES
+title: HMC HERMES
 
-description: > 
-  HERMES is a project to develop automated workflows for publishing research
+description: >
+  A project to develop automated workflows for publishing research
   software together with rich metadata, to improve finding, understanding,
   reusing, sharing and citing, and promoting software to first class research
   citizenship.
