--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ homepage = "https://project.software-metadata.pub"
 authors = []
 
 readme = "README.md"
-repository = "https://github.com/hermes-hmc/project"
+repository = "https://github.com/hermes-hmc/project.software-metadata.pub"
 
 [tool.poetry.dependencies]
 python = "^3.10"
